--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -27,6 +27,7 @@
     DocumentRoot ${APACHE_DOCUMENT_ROOT}/api/public
     ServerName api.localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}/api/public >
+        Header always set Access-Control-Allow-Origin "*"
         AllowOverride all
 	</Directory>
 </VirtualHost>
