Update Docker Setting and Readme

--- a/www/api/.env
+++ b/www/api/.env
@@ -24,7 +24,7 @@ APP_SECRET=346f0b1411b99d63921ae8cbeff5e7cf
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 #DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://simplis:SimplisCaseStudy23@database:3306/simplis?serverVersion=8.0.33&charset=utf8mb4"
+DATABASE_URL="mysql://simplisCS:simplisCS@database:3306/simplisCS?serverVersion=8.0.33&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
