Add Subscription  save, Download PDF, update Frontend

--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -27,7 +27,7 @@
     DocumentRoot ${APACHE_DOCUMENT_ROOT}/api/public
     ServerName api.localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}/api/public >
-        Header always set Access-Control-Allow-Origin "*"
+        #FOR CORS USE NEMIO
         AllowOverride all
 	</Directory>
 </VirtualHost>
