--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -10,12 +10,15 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "dompdf/dompdf": "^2.0",
+        "nelmio/cors-bundle": "^2.3",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
         "symfony/runtime": "6.3.*",
+        "symfony/twig-bundle": "6.3.*",
         "symfony/yaml": "6.3.*"
     },
     "config": {
