Fix steppers bugs

--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -28,6 +28,7 @@
     ServerName api.localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}/api/public >
         #FOR CORS USE NEMIO
+        #Header always set Access-Control-Allow-Origin "*"
         AllowOverride all
 	</Directory>
 </VirtualHost>
