--- a/www/api/.env
+++ b/www/api/.env
@@ -30,5 +30,6 @@ DATABASE_URL="mysql://simplisCS:simplisCS@database:3306/simplisCS?serverVersion=
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^http?://(app.localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN='^http?://(app.localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
